Target Windows Vista+ (not Windows XP) and enable enhanced instruction sets
Synchronet v3.20 doesn't actually work on Windows XP due to depenendies in
3rd party libraries we link with and more recent ciolib improvements.

So, no need to use an ancient WinSDK (7.0) or toolset anymore. Hooray!
I'm not changing the versions of C or C++ language enabled (yet), but that's
something we should consider doing.

Also, re-enable enhanced x86 processor extensions (e.g. SSE2) as I doubt very
much you can run Windows Vista on a pre-2000 CPU anyway. If this is a problem
for anyone, it's trivial to disable the processor extensions again.

--- a/src/conio/conio_gdi.vcxproj
+++ b/src/conio/conio_gdi.vcxproj
@@ -12,20 +12,20 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FBCCE03B-65EE-44A1-BBE1-B1F789D223A1}</ProjectGuid>
-    <WindowsTargetPlatformVersion>7.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v141_xp</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v141_xp</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -34,21 +34,21 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="$(VCTargetsPath)Microsoft.CPP.UpgradeFromVC60.props" />
     <Import Project="..\xpdev\xpdev.props" />
-    <Import Project="..\build\target_ia32.props" />
     <Import Project="..\smblib\smblib.props" />
     <Import Project="..\encode\encode.props" />
     <Import Project="..\hash\hash.props" />
     <Import Project="conio_gdi.props" />
+    <Import Project="..\build\target_winver.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="$(VCTargetsPath)Microsoft.CPP.UpgradeFromVC60.props" />
     <Import Project="..\xpdev\xpdev.props" />
-    <Import Project="..\build\target_ia32.props" />
     <Import Project="..\smblib\smblib.props" />
     <Import Project="..\encode\encode.props" />
     <Import Project="..\hash\hash.props" />
     <Import Project="conio_gdi.props" />
+    <Import Project="..\build\target_winver.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
